test-cases/valid/accept/hello_world.ul
void main() {
    print "Hello";
    println " world";
}
