test-cases/invalid/identifier_starts_with_digit.ul
void main() {
    int 1abc; // Cannot start with a number
}